--- a/style.css
+++ b/style.css
@@ -1,266 +1,93 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-body {
-  font-family: "Helvetica", sans-serif;
-  margin: 0rem;
-}
-/* Start Menu Design */
 .container {
-  padding-left: 9vw;
-  padding-right: 9vw;
+  padding-left: 10vw;
+  padding-right: 10vw;
 }
 .header {
   display: flex;
-  padding: 2rem 0;
+  /* justify-content: space-between; */
 }
 .menu-container {
-  width: 80%;
   display: flex;
-  justify-content: space-evenly;
-}
-.logo {
-  font-weight: bold;
-  font-size: 1.3rem;
-  text-align: left;
-  width: 30%;
+  /* justify-content: space-evenly; */
+  flex-grow: 1;
 }
 .menu {
   display: flex;
-  justify-content: space-evenly;
-  text-align: center;
-  font-size: 1rem;
-  font-weight: 100;
-  padding: 1rem;
-  width: 70%;
+  flex-grow: 2;
+  justify-content: space-around;
+  align-items: center;
 }
 .donate-btn {
-  font: Bold 1.2rem Helvetica;
+  border: none;
   background: #c1f7d5;
-  border-radius: 25px;
-  height: 2.4rem;
-  padding: 1rem;
-  text-decoration: none;
-  text-align: center;
-  margin-top: 1.8rem;
-  padding-top: 0.6rem;
+  border-radius: 2.1vw;
+  font: Bold 1.2vw Helvetica;
+  display: inline-block;
+  padding: 1vw 2vw 1vw 2vw;
+  margin-top: 1.3rem;
+}
+.menu-items {
+  font-size: 1.4vw;
 }
 /* tab mode  */
-@media only screen and (min-width: 640px) and (max-width: 1024px) {
+@media only screen and (min-width: 601px) and (max-width: 900px) {
   .header {
-    display: flex;
+    justify-content: space-between;
   }
   .menu-container {
     flex-direction: column;
-    width: 70%;
-  }
-  .menu {
-    flex-flow: row wrap;
-    font-size: 2.4vw;
-    justify-content: space-between;
-    padding: 0rem;
-    width: auto;
-    padding: 0rem;
   }
   .logo {
-    font-size: 2.2rem;
-    text-align: left;
-    width: auto;
-    margin: 0rem;
+    font-size: 3.4vw;
+  }
+  .menu {
+    justify-content: flex-start;
+  }
+  .menu-items {
+    font-size: 2.7vw;
+    padding-right: 3.8vw;
   }
   .donate-btn {
-    font-size: 1.6rem;
-    margin-top: 2.5rem;
-    margin-left: 2rem;
-    padding-bottom: 1rem;
-    width: 15rem;
-    text-align: center;
-    height: 3rem;
-    border-radius: 30px;
+    font-size: 2.3vw;
+    border-radius: 40px;
+    margin-top: 6vw;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
   }
 }
 /* mobile mode  */
-
-@media only screen and (min-width: 320px) and (max-width: 739px) {
+@media only screen and (min-width: 320px) and (max-width: 600px) {
+  .container {
+    padding-top: 5vw;
+  }
   .header {
     flex-direction: column;
-    margin: 0rem;
   }
-  .menu-container {
-    flex-direction: row;
-    width: 100%;
+  .logo {
+    font-size: 5.4vw;
+    flex-grow: 2;
+    display: flex;
+    align-items: center;
   }
   .menu {
     flex-direction: column;
-    width: 50%;
-    text-align: left;
-    font-weight: 100;
-    padding: 0rem;
-    font-size: 1rem;
-    padding-left: 4rem;
   }
-  .logo {
-    font-size: 1.5rem;
-    width: 50%;
-    text-align: left;
-    align-self: center;
-    padding: 1rem;
+  .menu-items {
+    font-size: 3.6vw;
+    align-self: baseline;
+    margin: 0.2rem;
   }
   .donate-btn {
-    width: 100%;
-    margin: 0.5rem;
     font-size: 3.5vw;
-    padding-bottom: 2.5rem;
-  }
-}
-/* End Menu Design */
-
-/* Start Main Section */
-main {
-  background-image: url("annie-spratt-135307-unsplash@3x.png");
-  background-size: cover;
-  background-position: right;
-  background-repeat: no-repeat;
-  background-color: rgb(8, 65, 8);
-  opacity: 1;
-  height: 40em;
-  opacity: 1;
-  margin: 0rem;
-  padding: 0rem;
-}
-.content {
-  display: flex;
-  justify-content: space-around;
-  padding-top: 8rem;
-}
-.climate-box1 {
-  width: 33rem;
-  height: 22rem;
-  background-color: white;
-}
-.climate-box2 {
-  width: 50%;
-  padding-left: 8rem;
-}
-.climate-box1 div {
-  background-color: black;
-  width: 10rem;
-  height: 2.8rem;
-  position: relative;
-  top: -25px;
-  left: 64px;
-}
-.climate-box1 div h2 {
-  padding: 13px 50px;
-  color: white;
-  font-size: 11px;
-  font-weight: lighter;
-}
-.climate-box1 p {
-  font-size: 2.6vw;
-  line-height: 1.5;
-  font-weight: bold;
-  margin: 0 2.5rem;
-  padding-bottom: 2rem;
-}
-.climate-box1 h6 {
-  padding-left: 10%;
-  font-size: 15px;
-  font-weight: lighter;
-  text-decoration: underline;
-}
-
-/* Tab Media Query */
-@media only screen and (min-width: 640px) and (max-width: 1024px) {
-  main {
-    height: 55em;
-  }
-  .content {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-evenly;
-  }
-  .climate-box1 {
-    margin-top: 5rem;
+    height: 10vw;
     width: 100%;
-    height: 24rem;
-  }
-  .climate-box2 {
-    width: 50%;
-    padding: 0rem;
-  }
-  .climate-box1 div {
-    width: 14rem;
-    height: 3.5rem;
-    position: relative;
-    top: -40px;
-    left: 6rem;
-  }
-  .climate-box1 div h2 {
+    border-radius: 45px;
     text-align: center;
-    justify-content: center;
-    padding-top: 1.2rem;
-    font-size: 1.5vw;
-    font-weight: lighter;
-  }
-  .climate-box1 p {
-    font-size: 3.8vw;
-    padding-left: 3.4rem;
-  }
-  .climate-box1 h6 {
-    padding-left: 5.9rem;
-    font-size: 2.5vw;
-    font-weight: lighter;
-    text-decoration: underline;
-    padding-bottom: 2rem;
-  }
-}
-/* mobile Media Query */
-@media only screen and (min-width: 320px) and (max-width: 739px) {
-  main {
-    height: 54em;
-    background-image: url("annie-spratt-135307-unsplash@2x.png");
-  }
-  .content {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-evenly;
-  }
-  .climate-box1 {
-    margin-top: 5rem;
-    width: 100%;
-    height: 20rem;
-  }
-  .climate-box2 {
-    width: 50%;
-    padding: 0rem;
-  }
-  .climate-box1 div {
-    width: 14rem;
-    height: 3.5rem;
-    position: relative;
-    top: -35px;
-    left: 4.3rem;
-  }
-  .climate-box1 div h2 {
-    text-align: center;
-    justify-content: center;
-    padding-top: 1.2rem;
-    font-size: 2.2vw;
-    font-weight: lighter;
-  }
-  .climate-box1 p {
-    font-size: 5.2vw;
-    padding: 0rem;
-    text-align: center;
-  }
-  .climate-box1 h6 {
-    padding: 0rem;
-    font-size: 2.5vw;
-    text-align: center;
+    padding-top: 2.5vw;
   }
 }
