--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
   font-size: 1.4vw;
 }
 /* tab mode  */
-@media only screen and (min-width: 601px) and (max-width: 900px) {
+@media screen and (min-width: 601px) and (max-width: 900px) {
   .header {
     justify-content: space-between;
   }
@@ -59,7 +59,7 @@
   }
 }
 /* mobile mode  */
-@media only screen and (min-width: 320px) and (max-width: 600px) {
+@media screen and (min-width: 320px) and (max-width: 600px) {
   .container {
     padding-top: 5vw;
   }
